--- a/Results.ipynb
+++ b/Results.ipynb
@@ -2,85 +2,43 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "import torch.functional as F\n",
-    "\n",
+    "import os\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "plt.style.use('dark_background')\n",
     "from sklearn.metrics import ConfusionMatrixDisplay, classification_report\n",
     "\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.functional as F\n",
+    "\n",
     "from options import Options\n",
     "from models import *\n",
     "from dataset import *\n",
-    "from utils import *"
+    "from utils import *\n",
+    "\n",
+    "device = 'cuda' if torch.cuda.is_available() else 'cpu'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "# try:\n",
-    "#     os.chdir('workspace')\n",
-    "# except:\n",
-    "#     pass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'cpu'"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['BERTCombinedModelTest_', 'BERTCombinedModel_Test']\n"
+     ]
     }
    ],
    "source": [
-    "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
-    "device"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['BERTCombinedModel_Test_finetune', 'BERTSeperateModel_Test', 'LSTM_Test']"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "os.listdir('models')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "print(os.listdir('models'))\n",
     "# Change this\n",
     "model_folder = f\"models/BERTSeperateModel_Test/\""
    ]
