Added roberto and made some modifications

--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
        "4  (ROOT (S (NP (NP (DT A) (NN group)) (PP (IN of...  "
       ]
      },
-     "execution_count": 89,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,6 +356,37 @@
     "\n",
     "embeds1, embeds2 = word_embeddings(input_ids1), word_embeddings(input_ids2)\n",
     "X = [embeds1, embeds2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "from utils import *\n",
+    "from transformers import RobertaTokenizer\n",
+    "\n",
+    "## Init\n",
+    "tokenizer = RobertaTokenizer.from_pretrained('roberta-base')\n",
+    "sentence1 = df['sentence1'].tolist()\n",
+    "sentence2 = df['sentence2'].tolist()\n",
+    "info = tokenizer(sentence1, sentence2, padding='max_length', max_length=200, return_tensors='pt')\n",
+    "\n",
+    "input_ids = info['input_ids']\n",
+    "attention_mask = info['attention_mask']\n",
+    "\n",
+    "y = torch.tensor(df['gold_label'].apply(lambda label: le(label)))\n",
+    "\n",
+    "## Get idx\n",
+    "idx = 0\n",
+    "input_ids = input_ids[idx]\n",
+    "attention_mask = attention_mask[idx]\n",
+    "\n",
+    "X = [input_ids, attention_mask]\n",
+    "y = y[idx]"
    ]
   },
   {
