--- a/Results.ipynb
+++ b/Results.ipynb
@@ -32,7 +32,7 @@
    "source": [
     "print(os.listdir('models'))\n",
     "# Change this\n",
-    "model_folder = f\"models/BERTCombined_TEST/\""
+    "model_folder = f\"models/BERTModelCombined_finetuned/\""
    ]
   },
   {
@@ -44,7 +44,7 @@
     "opt = Options()\n",
     "opt.load_options(model_folder)\n",
     "\n",
-    "state = torch.load(f\"{model_folder}/latest.pth\")\n",
+    "state = torch.load(f\"{model_folder}/latest.pth\", map_location=torch.device('cpu'))\n",
     "history = torch.load(f\"{model_folder}/history.pth\")\n",
     "\n",
     "Dataset = Datasets[opt.dataset]\n",
@@ -54,7 +54,7 @@
     "test_set = Dataset(test_df, opt)\n",
     "test_loader = DataLoader(test_set, batch_size=30, shuffle=True)\n",
     "\n",
-    "model.load_state_dict(state['state_dict'])"
+    "model.load_state_dict(state['state_dict'],)"
    ]
   },
   {
@@ -83,11 +83,40 @@
    "source": [
     "# Confusion matrix and accuracies\n",
     "\n",
-    "test_loader = DataLoader(test_set, batch_size=30, shuffle=True)\n",
+    "test_loader = DataLoader(test_set, batch_size=30, shuffle=False)\n",
     "\n",
     "\n",
     "y_pred, y_test, test_accuracy = predict(model, test_loader)\n",
     "print(test_accuracy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred, y_test = torch.tensor(y_pred).detach().numpy(), torch.tensor(y_test).detach().numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Succ\n",
+    "test_df[y_pred==y_test]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fails\n",
+    "test_df[y_pred!=y_test]"
    ]
   },
   {
