--- a/Results.ipynb
+++ b/Results.ipynb
@@ -21,7 +21,7 @@
     "from dataset import *\n",
     "from utils import *\n",
     "\n",
-    "device = 'cuda' if torch.cuda.is_available() else 'cpu'"
+    "device = 'cuda:2' if torch.cuda.is_available() else 'cpu'"
    ]
   },
   {
