--- a/Results.ipynb
+++ b/Results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -45,14 +45,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of RobertaModel were not initialized from the model checkpoint at roberta-base and are newly initialized: ['roberta.pooler.dense.weight', 'roberta.pooler.dense.bias']\n",
+      "Some weights of RobertaModel were not initialized from the model checkpoint at roberta-base and are newly initialized: ['roberta.pooler.dense.bias', 'roberta.pooler.dense.weight']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
      ]
     },
@@ -62,7 +62,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,14 +79,14 @@
     "\n",
     "test_df = pd.read_csv(f\"{opt.data_folder}/test.csv\")\n",
     "test_set = Dataset(test_df, opt)\n",
-    "test_loader = DataLoader(test_set, batch_size=30, shuffle=True)\n",
+    "test_loader = DataLoader(test_set, batch_size=30, shuffle=False)\n",
     "\n",
     "model.load_state_dict(state['state_dict'],)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -170,35 +170,11 @@
        "      <th>sentence1</th>\n",
        "      <th>sentence2</th>\n",
        "      <th>gold_label</th>\n",
-       "      <th>y_pred</th>\n",
        "      <th>y_test</th>\n",
+       "      <th>y_pred</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>A bunch of people are standing all together in...</td>\n",
-       "      <td>A group of people are planning something.</td>\n",
-       "      <td>neutral</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>A gray-haired man rides a bike in front of a b...</td>\n",
-       "      <td>An older man rides his bike and is almost hit ...</td>\n",
-       "      <td>neutral</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>A young girl wearing a red shirt and cap smili...</td>\n",
-       "      <td>The girl is smiling because she is having fun.</td>\n",
-       "      <td>neutral</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>A woman in a blue uniform, with long curly red...</td>\n",
@@ -206,6 +182,30 @@
        "      <td>contradiction</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>A small child in a red jacket is sitting on a ...</td>\n",
+       "      <td>The child's hands are on the man's head.</td>\n",
+       "      <td>entailment</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Man with black shirt and sunglasses makes some...</td>\n",
+       "      <td>A woman cuts celery.</td>\n",
+       "      <td>contradiction</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>A man in a suit stands on a walkway with is su...</td>\n",
+       "      <td>A man is at an airport.</td>\n",
+       "      <td>entailment</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
@@ -224,12 +224,20 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>9993</th>\n",
+       "      <td>A woman in a black outfit lies face first on a...</td>\n",
+       "      <td>There is a person in a room.</td>\n",
+       "      <td>entailment</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>9994</th>\n",
        "      <td>A young man is standing near his bike outside ...</td>\n",
        "      <td>The man is old.</td>\n",
        "      <td>contradiction</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9995</th>\n",
@@ -255,14 +263,6 @@
        "      <td>2</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9999</th>\n",
-       "      <td>A police person is on a motorcycle on the side...</td>\n",
-       "      <td>A policewoman is sitting on the motorcycle beh...</td>\n",
-       "      <td>neutral</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "<p>4366 rows × 5 columns</p>\n",
@@ -270,48 +270,48 @@
       ],
       "text/plain": [
        "                                              sentence1  \\\n",
-       "4     A bunch of people are standing all together in...   \n",
-       "7     A gray-haired man rides a bike in front of a b...   \n",
-       "10    A young girl wearing a red shirt and cap smili...   \n",
        "11    A woman in a blue uniform, with long curly red...   \n",
+       "12    A small child in a red jacket is sitting on a ...   \n",
+       "14    Man with black shirt and sunglasses makes some...   \n",
+       "15    A man in a suit stands on a walkway with is su...   \n",
        "16    Man wearing blue bowing on floor in front of a...   \n",
        "...                                                 ...   \n",
+       "9993  A woman in a black outfit lies face first on a...   \n",
        "9994  A young man is standing near his bike outside ...   \n",
        "9995                        Man sitting playing guitar.   \n",
        "9997  This person looks to be snowboarding on a very...   \n",
        "9998  A group of cleaners are sweeping up animal fec...   \n",
-       "9999  A police person is on a motorcycle on the side...   \n",
        "\n",
-       "                                              sentence2     gold_label  \\\n",
-       "4             A group of people are planning something.        neutral   \n",
-       "7     An older man rides his bike and is almost hit ...        neutral   \n",
-       "10       The girl is smiling because she is having fun.        neutral   \n",
-       "11                                   The horse is dead.  contradiction   \n",
-       "16                          A man is wearing something.     entailment   \n",
-       "...                                                 ...            ...   \n",
-       "9994                                    The man is old.  contradiction   \n",
-       "9995           A man is sitting and strumming a guitar.     entailment   \n",
-       "9997        Young snowboarder sizing up their next jump     entailment   \n",
-       "9998                A group of cleaners after a parade.     entailment   \n",
-       "9999  A policewoman is sitting on the motorcycle beh...        neutral   \n",
+       "                                        sentence2     gold_label  y_test  \\\n",
+       "11                             The horse is dead.  contradiction       0   \n",
+       "12       The child's hands are on the man's head.     entailment       2   \n",
+       "14                           A woman cuts celery.  contradiction       0   \n",
+       "15                        A man is at an airport.     entailment       2   \n",
+       "16                    A man is wearing something.     entailment       2   \n",
+       "...                                           ...            ...     ...   \n",
+       "9993                 There is a person in a room.     entailment       2   \n",
+       "9994                              The man is old.  contradiction       0   \n",
+       "9995     A man is sitting and strumming a guitar.     entailment       2   \n",
+       "9997  Young snowboarder sizing up their next jump     entailment       2   \n",
+       "9998          A group of cleaners after a parade.     entailment       2   \n",
        "\n",
-       "      y_pred  y_test  \n",
-       "4          2       2  \n",
-       "7          2       2  \n",
-       "10         0       0  \n",
-       "11         0       0  \n",
-       "16         2       2  \n",
-       "...      ...     ...  \n",
-       "9994       2       2  \n",
-       "9995       2       2  \n",
-       "9997       2       2  \n",
-       "9998       2       2  \n",
-       "9999       2       2  \n",
+       "      y_pred  \n",
+       "11         0  \n",
+       "12         2  \n",
+       "14         0  \n",
+       "15         2  \n",
+       "16         2  \n",
+       "...      ...  \n",
+       "9993       2  \n",
+       "9994       0  \n",
+       "9995       2  \n",
+       "9997       2  \n",
+       "9998       2  \n",
        "\n",
        "[4366 rows x 5 columns]"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,12 +320,12 @@
     "# Succ\n",
     "test_df['y_pred'] = y_pred\n",
     "test_df['y_test'] = y_test\n",
-    "test_df.loc[y_pred==y_test, ['sentence1', 'sentence2', 'gold_label', 'y_pred', 'y_test']]"
+    "test_df.loc[y_pred==y_test, ['sentence1', 'sentence2', 'gold_label', 'y_test', 'y_pred']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -352,8 +352,8 @@
        "      <th>sentence1</th>\n",
        "      <th>sentence2</th>\n",
        "      <th>gold_label</th>\n",
-       "      <th>y_pred</th>\n",
        "      <th>y_test</th>\n",
+       "      <th>y_pred</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -362,40 +362,40 @@
        "      <td>A kid bored in a train with brown hair and his...</td>\n",
        "      <td>A child is riding the train from New York to B...</td>\n",
        "      <td>neutral</td>\n",
-       "      <td>2</td>\n",
        "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>A brown dog and black and white dog run along ...</td>\n",
        "      <td>Two squirrels run after acorns in the grass.</td>\n",
        "      <td>contradiction</td>\n",
-       "      <td>2</td>\n",
        "      <td>0</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>A person in full astronaut suit and gear train...</td>\n",
        "      <td>A female astronaut adjusting to the feeling of...</td>\n",
        "      <td>neutral</td>\n",
-       "      <td>2</td>\n",
        "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>An old Indian man dressed in rags sleeps on th...</td>\n",
        "      <td>An old Indian man is dressed up</td>\n",
        "      <td>contradiction</td>\n",
-       "      <td>2</td>\n",
        "      <td>0</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Two girls (one dressed in blue, and one dresse...</td>\n",
-       "      <td>The winner gets a free soda.</td>\n",
+       "      <th>4</th>\n",
+       "      <td>A bunch of people are standing all together in...</td>\n",
+       "      <td>A group of people are planning something.</td>\n",
        "      <td>neutral</td>\n",
+       "      <td>1</td>\n",
        "      <td>2</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -406,44 +406,44 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>9984</th>\n",
+       "      <td>A man, boy and a white dog are looking at a di...</td>\n",
+       "      <td>A man is all alone looking at postcards.</td>\n",
+       "      <td>contradiction</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>9986</th>\n",
        "      <td>A crowd of people is looking at something outs...</td>\n",
        "      <td>People are looking inside</td>\n",
        "      <td>contradiction</td>\n",
-       "      <td>2</td>\n",
        "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9988</th>\n",
-       "      <td>A young boy in red leaping into sand at a play...</td>\n",
-       "      <td>A child is playing in the sand.</td>\n",
-       "      <td>entailment</td>\n",
        "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9990</th>\n",
-       "      <td>two girls looking out the window at \"Hair at H...</td>\n",
-       "      <td>Two people look out a window.</td>\n",
-       "      <td>entailment</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9991</th>\n",
        "      <td>A boy spinning on a blue and yellow merry-go-r...</td>\n",
        "      <td>The boy is wearing black.</td>\n",
        "      <td>neutral</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9996</th>\n",
        "      <td>Two women stand in the street both wearing mat...</td>\n",
        "      <td>Two women are dancing in the street wearing dr...</td>\n",
        "      <td>neutral</td>\n",
-       "      <td>2</td>\n",
        "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9999</th>\n",
+       "      <td>A police person is on a motorcycle on the side...</td>\n",
+       "      <td>A policewoman is sitting on the motorcycle beh...</td>\n",
+       "      <td>neutral</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -456,56 +456,56 @@
        "1     A brown dog and black and white dog run along ...   \n",
        "2     A person in full astronaut suit and gear train...   \n",
        "3     An old Indian man dressed in rags sleeps on th...   \n",
-       "5     Two girls (one dressed in blue, and one dresse...   \n",
+       "4     A bunch of people are standing all together in...   \n",
        "...                                                 ...   \n",
+       "9984  A man, boy and a white dog are looking at a di...   \n",
        "9986  A crowd of people is looking at something outs...   \n",
-       "9988  A young boy in red leaping into sand at a play...   \n",
-       "9990  two girls looking out the window at \"Hair at H...   \n",
        "9991  A boy spinning on a blue and yellow merry-go-r...   \n",
        "9996  Two women stand in the street both wearing mat...   \n",
+       "9999  A police person is on a motorcycle on the side...   \n",
        "\n",
        "                                              sentence2     gold_label  \\\n",
        "0     A child is riding the train from New York to B...        neutral   \n",
        "1          Two squirrels run after acorns in the grass.  contradiction   \n",
        "2     A female astronaut adjusting to the feeling of...        neutral   \n",
        "3                       An old Indian man is dressed up  contradiction   \n",
-       "5                          The winner gets a free soda.        neutral   \n",
+       "4             A group of people are planning something.        neutral   \n",
        "...                                                 ...            ...   \n",
+       "9984           A man is all alone looking at postcards.  contradiction   \n",
        "9986                          People are looking inside  contradiction   \n",
-       "9988                    A child is playing in the sand.     entailment   \n",
-       "9990                      Two people look out a window.     entailment   \n",
        "9991                          The boy is wearing black.        neutral   \n",
        "9996  Two women are dancing in the street wearing dr...        neutral   \n",
+       "9999  A policewoman is sitting on the motorcycle beh...        neutral   \n",
        "\n",
-       "      y_pred  y_test  \n",
-       "0          2       1  \n",
-       "1          2       0  \n",
-       "2          2       1  \n",
-       "3          2       0  \n",
-       "5          2       0  \n",
+       "      y_test  y_pred  \n",
+       "0          1       2  \n",
+       "1          0       2  \n",
+       "2          1       2  \n",
+       "3          0       2  \n",
+       "4          1       2  \n",
        "...      ...     ...  \n",
-       "9986       2       0  \n",
-       "9988       2       0  \n",
-       "9990       2       0  \n",
-       "9991       0       1  \n",
-       "9996       2       1  \n",
+       "9984       0       2  \n",
+       "9986       0       2  \n",
+       "9991       1       0  \n",
+       "9996       1       2  \n",
+       "9999       1       2  \n",
        "\n",
        "[5634 rows x 5 columns]"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Fails\n",
-    "test_df.loc[y_pred!=y_test, ['sentence1', 'sentence2', 'gold_label', 'y_pred', 'y_test']]"
+    "test_df.loc[y_pred!=y_test, ['sentence1', 'sentence2', 'gold_label', 'y_test', 'y_pred']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
